--- a/SqlBulkTools.NetStandard.IntegrationTests/SqlBulkTools.NetStandard.IntegrationTests.csproj
+++ b/SqlBulkTools.NetStandard.IntegrationTests/SqlBulkTools.NetStandard.IntegrationTests.csproj
@@ -7,9 +7,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Crane" Version="2.2.2" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
-		<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
 
 	<ItemGroup>
