--- a/SqlBulkTools.NetStandard.UnitTests/SqlBulkTools.NetStandard.UnitTests.csproj
+++ b/SqlBulkTools.NetStandard.UnitTests/SqlBulkTools.NetStandard.UnitTests.csproj
@@ -7,13 +7,15 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.18.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
 		<PackageReference Include="Microsoft.SqlServer.Types" Version="160.1000.6">
 			<NoWarn>NU1701</NoWarn>
 		</PackageReference>
 		<PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
-		<PackageReference Include="xunit" Version="2.8.0" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+		<PackageReference Include="xunit" Version="2.9.2" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
