--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,7 @@ jobs:
       run: dotnet test SqlBulkTools.NetStandard.UnitTests --configuration Release --no-build
 
     - name: Pack
-      run: |
-        dotnet pack SqlBulkTools.NetStandard --configuration Release --no-build --output . &&
-        dotnet pack SqlBulkTools.NetStandard --configuration ReleaseSystemData --output . 
+      run: dotnet pack SqlBulkTools.NetStandard --configuration Release --no-build --output .
 
     - name: Publish the package to nuget.org when we have a new version
       shell: pwsh
