--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -26,7 +26,7 @@ Now also supports entities of type Dictionary&lt;string, object&gt; for easy imp
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<LangVersion>latest</LangVersion>
-		<Configurations>Debug;Release;ReleaseSystemData</Configurations>
+		<Configurations>Debug;Release</Configurations>
 	</PropertyGroup>
 
 	<ItemGroup>
